vbnc/vbnc/tests/Errors/36714-1.vb
Public Class SomeClass

    Public Property Prop As New System.Collections.Generic.List(Of String)
        Get
            Return Nothing
        End Get
        Set(value As System.Collections.Generic.List(Of String))
        End Set
    End Property

End Class